Update exercise done

--- a/Testing/Views/Product/Index.cshtml
+++ b/Testing/Views/Product/Index.cshtml
@@ -30,3 +30,7 @@
     }
 
 </table>
+
+<div style="display: block">
+    <a href="/Product/UpdateProduct/@Model.ProductID">Update this Product</a>
+</div>
