--- a/Testing/Views/Product/ViewProduct.cshtml
+++ b/Testing/Views/Product/ViewProduct.cshtml
@@ -27,3 +27,18 @@
     </tr>
 </table>
 
+<div style=" display: block">
+
+    <a href="/Product/UpdateProduct/@Model.ProductID">Update this product</a>
+</div>
+
+<div style="display: block">
+
+    @using (Html.BeginForm("DeleteProduct", "Product", "Post"))
+    {
+        <input type="hidden" asp-for="ProductID" value="@Model.ProductID" />
+        <input type="submit" onclick="return confirm('Are you sure?')" value="Delete this product" />
+    }
+</div>
+
+
